willium.iatemplate/Contents/Resources/main.css
/* ... */
script {
    display: none !important;
    width: 0;
    height: 0;
}

a {
    text-decoration: underline;
    color: inherit;
    outline: none;
    color: #171726;
    font-family: "charterregular", "Georgia", serif;
    font-style: normal;
    cursor: pointer;
    display: inline;
    overflow: visible;
    position: relative;
}

a:hover,
a:active,
a:visited,
a:focus {
    outline: none;
}

a.light {
    color: #A9ACB5;
    text-decoration: none;
}

a.light:hover {
    text-decoration: underline;
}

section {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    position: relative;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-align: start;
    -ms-flex-align: start;
    align-items: flex-start;
}

section::after {
    clear: both;
    content: "";
    display: table;
}

section>*:not(script):not(.table-container) {
    display: block;
}

nav .nav-item {
    text-decoration: none;
    display: inline-block;
}

nav .nav-item.active {
    font-weight: 300;
    font-family: "charterbold", "Georgia", serif;
}

nav .nav-item.active:before {
    content: "\25BA";
    font-size: 0.7rem;
    color: #DF2120;
    position: absolute;
    left: -1rem;
    padding-top: 0.05rem;
    opacity: 1;
}

nav .nav-item:hover:before {
    content: "\25BA";
    font-size: 0.7rem;
    color: #DF2120;
    position: absolute;
    left: -1rem;
    padding-top: 0.05rem;
    opacity: 0.3;
}

hr {
    display: none;
    -webkit-box-flex: 1;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    height: 0;
    width: 100%;
    border: none;
    border-bottom: 1px solid #a9acb5;
    margin-bottom: 40px;
    opacity: 0.2;
}

hr:last-child {
    margin-bottom: 0;
}

br {
    margin-bottom: 40px;
}

sup,
sub {
    font-size: 0.8rem;
}

sup {
    vertical-align: super;
}

sub {
    vertical-align: sub;
}

ol,
ul {
    list-style-position: outside;
}

ol.accessory,
ul.accessory {
    padding-left: 2rem;
}

ol>li a,
ul>li a {
    display: inline-block;
}

ol {
    list-style-type: upper-roman;
    counter-reset: item;
}

ol.accessory>li:before {
    content: counter(item, upper-roman) ". ";
    counter-increment: item;
    color: #A9ACB5;
    position: absolute;
    text-align: right;
    left: -2rem;
    width: 1.5rem;
    font-size: 0.9rem;
}

ul.accessory>li:before {
    content: "◆";
    color: #A9ACB5;
    position: absolute;
    text-align: right;
    left: -2rem;
    width: 1.5rem;
    font-size: 0.9rem;
}

ul.inline {
    padding-left: 0;
}

ul.inline>* {
    display: inline-block;
    position: relative;
    margin-right: 0.5rem;
}

ul.inline>*:last-child {
    margin-right: 0;
}

ul.inline>*:before,
ul.inline>*:last-child:after {
    content: none;
    display: none;
}

ul.inline>*:after {
    position: absolute;
    content: ',';
    top: 0;
    right: -0.32rem;
}

li.emphasize {
    font-family: "charterbold", "Georgia", serif;
    font-weight: 300;
}

li.emphasize .detail {
    font-family: "charterbold_italic", "Georgia", serif;
    font-style: italic;
    font-weight: 300;
}

h1,
h2,
h3 {
    overflow: visible !important;
}

h1 {
    font-family: "SF Mono", "meslo_lg_sregular", "Menlo", "Source Code Pro", monospace;
    font-size: 1.25rem;
    margin: 10px 0;
}

hgroup>h1 {
    line-height: 1.5rem;
}

.date {
    font-family: "SF Mono", "meslo_lg_sregular", "Menlo", "Source Code Pro", monospace;
    color: #A9ACB5;
    text-align: right;
    font-size: 0.9rem;
    line-height: 1.25rem;
}

h2 {
    font-family: "SF Mono", "meslo_lg_sregular", "Menlo", "Source Code Pro", monospace;
    color: #A9ACB5;
    font-size: 1.07rem;
    margin: 10px 0;
}

h3 {
    font-size: 1.25rem;
    font-weight: 300;
    margin: 30px 0;
    font-family: "charterbold", "Georgia", serif;
}

hgroup>h2.subtitle {
    line-height: 1.32rem;
}

h4 {
    text-transform: lowercase;
    font-family: "SF Mono", "meslo_lg_sregular", "Menlo", "Source Code Pro", monospace;
    color: #A9ACB5;
    font-size: 0.9rem;
    margin: 10px 0;
    overflow: visible;
}

p,
form label,
li {
    position: relative;
    display: block;
    overflow: visible;
    line-height: 1.6rem;
    letter-spacing: 0.01rem;
}

code {
    font-family: "SF Mono", "meslo_lg_sregular", "Menlo", "Source Code Pro", monospace;
    font-size: 0.9rem;
}

form {
    display: -webkit-box !important;
    display: -ms-flexbox !important;
    display: flex !important;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -ms-flex-direction: row;
    flex-direction: row;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
}

form input {
    height: 2.5rem;
    -webkit-appearance: none;
    outline: none;
    border: none;
    font-size: 1rem;
    color: #171726;
    border-radius: 4px;
}

form input[type="text"],
form input[type="email"] {
    padding: 0 1rem;
    background-color: #ffffff;
    border: 1px solid #A9ACB5;
}

form input[type="text"]:focus,
form input[type="email"]:focus {
    border: 1px solid #171726;
}

input[type="submit"],
button {
    cursor: pointer;
    width: 120px;
    color: #171726;
    font-weight: 500;
    font-family: "SF Mono", "meslo_lg_sbold", "Menlo", "Source Code Pro", monospace;
    font-size: 1rem;
    color: #ffffff;
    background-color: #171726;
}

#page.full article section .table-container {
    z-index: 1;
    overflow-y: hidden;
    position: relative;
    overflow-x: auto;
}

table {
    position: relative;
    text-transform: lowercase;
    font-family: "SF Mono", "meslo_lg_sregular", "Menlo", "Source Code Pro", monospace;
    font-size: 0.9rem;
    display: table;
    margin-right: 1px;
    overflow: visible;
    border-spacing: 0;
    border-collapse: collapse;
}

table tbody tr:hover {
    background-color: #f3f3f3;
}

table td,
table tr td {
    border: 1px solid #A9ACB5;
}

table th {
    background-color: #ffffff;
}
/* ... */

